More work on the main page, specigically adding another *actual* image and fixing the first set of images so it overlaps (horizontally) with the flavour text

--- a/Styles/gama.css
+++ b/Styles/gama.css
@@ -15,7 +15,7 @@ body {
     height: 100%;
     color: var(--darkColour);
     font-family: futura;
-    font-size: min(1vw, 16px);
+    font-size: min(2vw, 16px);
     margin: 0;
 }
 
@@ -23,7 +23,7 @@ h1, h2 {
     font-family: superFamicomFont, Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     display: inline;
-    font-size: min(4vw, 50px);
+    font-size: min(3vw, 50px);
     text-shadow: 5px 3px 3px var(--lightColour)
 }
 
@@ -32,16 +32,33 @@ h3 {
     font-size: 1.5vw;
 }
 
-.border {
-    margin-top: 8vw;
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.bg-image, .parallax {
+    min-width: 100%;
+    min-width: 100%;
+    position: absolute;
+    margin: 0 auto;
+    background-position: center;
+    background-size: cover;
+    overflow: auto;
+    /* opacity: 0.9; */
+    background-repeat: no-repeat;
+}
+
+.bg-image {
+    z-index: -1;
 }
 
 .overlap-text, .overlap-text-right, .overlap-text-left {
     text-align: center;
     color: var(--darkColour);
     position: relative;
-    top: 20%;
     background-color: var(--midColour);
+    transform: translateY(10vw);
     padding: 1.5em;
     max-width: 45%;
     border-radius: 5px;
@@ -53,19 +70,11 @@ h3 {
 }
 
 .overlap-text-left {
-    left: 10%;
+    left: 8%;
 }
 
 .parallax {
-    min-height: 100%;
-    min-width: 100%;
-    position: absolute;
-    background-position: center;
-    background-size: cover;
-    overflow: auto;
-    /* opacity: 0.9; */
-    background-repeat: no-repeat;
-    z-index: -1;
+    z-index: -5;
 }
 
 .section {
@@ -96,6 +105,7 @@ h3 {
     float: right;
     width: min(30vw, 620px);
     position: relative;
+    right: 5%;
     z-index: 420;
 }
 
